--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,12 +9,14 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  font-family: "Poppins", "sans-serif";
+  background-color: var(--primary);
 }
 
 :root {
   --primary: #f5edf0;
-  --secondary: #355070;
+  --blue: #355070;
   --highlight: #F15025;
   --purple: #6D597A;
-  --gray: #D1CCDC;
+  --secondary: #D1CCDC;
 }
