--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -15,13 +15,14 @@
 
 .navbar_rightSide{
   display: flex;
+  align-items: center;
   gap: 30px;
   color: var(--primary)
 }
 
 .navbar_rightSide > input {
   border-radius: 10px;
-  border: 3px solid var(--primary);
+  border: none;
   height: 25px;
   padding: 0px 8px;
   font-size: 1.4rem;
