--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -1,8 +1,8 @@
 .sidebar_container {
   display: flex;
   flex-direction: column;
-  padding: 80px 30px 30px 30px;
-  width: 30vw;
+  padding: 90px 30px 30px 30px;
+  width: 35vw;
   min-height: 100vh;
   background-color: var(--secondary);
   color: var(--blue);
@@ -10,3 +10,34 @@
   font-size: 1.4rem;
 }
 
+.sidebar_button{
+  position: relative;
+  border: none;
+  font-size: 1.6rem;
+  text-align: start;
+  width: 100px;
+  padding: 8px;
+  background-color: var(--secondary);
+}
+
+.sidebar_button:hover{
+  color: var(--purple);
+  cursor: pointer;
+}
+
+.sidebar_button::before{
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -25px;
+  width: 25px;
+  height: 25px;
+
+  background-image: url('../assets/chevron.png');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  transition: all .2s ease;
+  transform: rotate(180deg)
+}
