Added the beginnings to the API fetch

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,7 +24,7 @@ html {
 /* Filter Settings
 red: filter: invert(42%) sepia(44%) saturate(2134%) hue-rotate(341deg) brightness(92%) contrast(106%);
 blue: filter: invert(27%) sepia(6%) saturate(3691%) hue-rotate(173deg) brightness(102%) contrast(91%); 
-
+secondary: filter: invert(90%) sepia(13%) saturate(194%) hue-rotate(217deg) brightness(92%) contrast(88%);
 */
 
 .home_container{
