--- a/client/src/styles/display.css
+++ b/client/src/styles/display.css
@@ -1,5 +1,5 @@
 .display_main{
-  padding-top: 90px;
+  padding-top: 80px;
   width: 65vw;
   min-height: 100vh;
   background-color: var(--primary);
@@ -31,29 +31,43 @@
   color: var(--purple);
 }
 
-.display_cardContainer{
-  display: flex;
-  flex-direction: column;
-  height: 200px;
-  width: 150px;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid green;
-  transition: all .3s ease;
-}
-
-.display_cardDrinkImage{
-  height: 100px;
-  width: 100px
-}
-
 .display_allCards{
-  padding-top: 90px;
+  padding: 10px;
   width: 65vw;
   display: flex;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 80vh;
   gap: 25px;
-  border: 1px solid red;
   flex-wrap: wrap;
+}
+
+.display_cardContainer{
+  padding: 10px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 250px;
+  width: 200px;
+  justify-content: end;
+  align-items: center;
+  transition: all .3s ease;
+  background-color: white;
+  box-shadow: 0px 3px 6px 1px rgba(0,0,0,0.3);
+}
+
+.display_cardDrinkImage{
+  position: absolute;
+  top: 0;
+  height: 200px;
+  width: auto;
+  transition: all .3s ease;
+}
+
+.display_cardQuote{
+  font-size: 1.4rem;
+}
+
+.display_cardContainer:hover .display_cardDrinkImage{
+  cursor: pointer;
+  opacity: 0.5;
 }
