--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -4,6 +4,7 @@
   z-index: 100;
   background-color: var(--blue);
   height: 80px;
+  box-shadow: -1px 5px 20px 0px rgba(0,0,0,0.6);
 }
 
 .navbar_content {
