--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -36,8 +36,9 @@
 .navbar_favorites{
   margin: 0px 30px 0px 100px;
   border: 2px solid var(--primary);
-  padding: 5px 10px;
+  padding: 8px 10px;
   color: var(--primary);
+  background-color: var(--blue);
   font-size: 1.4rem;
   border-radius: 15px;
 }
