--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -2,16 +2,18 @@
   display: flex;
   flex-direction: column;
   padding: 100px 30px 30px 30px;
-  width: 35vw;
-  min-height: 100vh;
+  width: 35%;
+  min-height: 100%;
   background-color: var(--secondary);
   color: var(--blue);
   gap: 15px;
   font-size: 1.4rem;
+  transition: all .4s ease;
 }
 
 .sidebar_container > p{
   padding-bottom: 25px;
+  transition: all .4s ease;
 }
 
 .sidebar_button{
@@ -22,7 +24,8 @@
   width: 100px;
   padding: 8px;
   background-color: var(--secondary);
-  color: var(--red)
+  color: var(--red);
+  transition: all .4s ease;
 }
 
 .sidebar_button:hover{
@@ -91,4 +94,9 @@ transition: 0.2s;
 .sidebar_note{
   padding-top: 20px;
   color: var(--red);
+}
+
+.sidebar_titleWrapper{
+  display: flex;
+  justify-content: space-between;
 }
