Testing mousedown vs onclick for mobile tapping.

--- a/client/src/styles/display.css
+++ b/client/src/styles/display.css
@@ -1,6 +1,6 @@
 .display_main{
   width: 65vw;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--primary);
   display: flex;
   justify-content: center;
