--- a/client/src/styles/display.css
+++ b/client/src/styles/display.css
@@ -1,6 +1,6 @@
 .display_main{
   width: 65vw;
-  min-height: 100vh;
+  max-height: 100vh;
   background-color: var(--primary);
   display: flex;
   justify-content: center;
@@ -145,11 +145,11 @@
   .display_cardContainer{
     padding: 8px;
     height: 325px;
-    width: 225px;
+    width: 175px;
   }
 
   .display_cardDrinkImage{
-    width: 220px;
+    width: 168px;
     transition: all .3s ease;
   }
 
