Fixed scrolling issues. Removed visual bar and resolved X-axis scrolling when sidebar is open.

--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -12,6 +12,10 @@
   overflow-y: auto;
 }
 
+.sidebar_container::-webkit-scrollbar{
+  display: none;
+}
+
 .sidebar_container > p{
   padding-bottom: 25px;
   transition: all .4s ease;
