--- a/client/src/styles/display.css
+++ b/client/src/styles/display.css
@@ -8,6 +8,10 @@
   overflow-y: auto;
 }
 
+.display_main::-webkit-scrollbar{
+  display: none;
+}
+
 .display_empty, .display_noResults{
   margin-top: 150px;
   height: 400px;
@@ -95,7 +99,7 @@
 }
 
 .display_filler{
-  min-height: 250px;
+  height: 250px;
   width: 250px;
 }
 
@@ -137,7 +141,8 @@
 
   .display_allCards{
     margin-top: 100px;
-    max-width: 100vw;
+    width: 30w;
+    overflow-x: hidden;
   }
 
   .display_empty, .display_noResults{
@@ -153,7 +158,7 @@
 
   .display_cardContainer{
     padding: 8px;
-    height: 325px;
+    height: 240px;
     width: 175px;
   }
 
@@ -176,6 +181,6 @@
   }
 
   .display_margin{
-    margin-top: 30px;
+    margin-top: 20px;
   }
 }
